--- a/quizsite/cse/templates/cse/home.html
+++ b/quizsite/cse/templates/cse/home.html
@@ -69,7 +69,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="navbar-brand" href="">
-                    <img src="{% static "cse/image/Home.png" %}" alt="home"  width="30" height="24"/>
+                    <img src="{% static "cse/image/Home.png" %}" alt="home"  width="30" height="24">
                   </a>
                 </li>
                 <li class="nav-item">
