--- a/quizsite/account/templates/account/profileview.html
+++ b/quizsite/account/templates/account/profileview.html
@@ -23,7 +23,9 @@
     <form method="POST" class="form-group" enctype="multipart/form-data">
         {% csrf_token %}
         <p><label for="id_username">Username:</label> <input type="text" name="username" value="{{user.username}}" maxlength="150" required id="id_username"> <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span></p>
-        <p><label for="id_email">Email address:</label> <input type="email" name="email" value="{{user.email}}" maxlength="254" id="id_email"></p><br>
+        <p><label for="id_email">Email address:</label> <input type="email" name="email" value="{{user.email}}" maxlength="254" id="id_email"></p>
+        <p><label for="id_first_name">First Name:</label> <input type="text" name="first_name" value="{{user.first_name}}" maxlength="254" id="id_first_name"></p>
+        <p><label for="id_last_name">Last Name:</label> <input type="text" name="last_name" value="{{user.last_name}}" maxlength="254" id="id_last_name"></p>
         {{p_form.as_p}}
         <button type="submit">Submit</button>
 
