commited on 20/7/21 12:36 pm

--- a/quizsite/account/templates/account/acc_active_email.html
+++ b/quizsite/account/templates/account/acc_active_email.html
@@ -2,4 +2,7 @@
 Hi {{ user.username }},
 Please click on the link to confirm your registration,
 http://{{ domain }}/activate/{{ uid }}/{{ token }}
+
+
+The MCQhero Team
 {% endautoescape %}
