--- a/quizsite/cse/static/cse/css/password_reset.css
+++ b/quizsite/cse/static/cse/css/password_reset.css
@@ -1,4 +1,7 @@
-
+.second-navbar {
+    margin-top: 56px;
+    border-top: 0.5px solid rgba(124, 120, 120, 0.973);
+}
 #id1{
     background-color:black
     
