--- a/quizsite/account/templates/account/profileview.html
+++ b/quizsite/account/templates/account/profileview.html
@@ -14,23 +14,204 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     
-    <title>Profile</title>
+    <title>My Profile</title>
 </head>
-<body>
+<body style="background-color: rgba(0, 0, 0, 0.945)">
+    <div class="header">
+        <div class="menu-bar">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top first-nav">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="/">MCQhero</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active"  href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Contact Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Disclaimer</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Privacy Policy</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Terms And Conditions</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Blog</a>
+                  </li>  
+                </ul>
+              </div>
+            </div>
+          </nav>
+          
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top second-navbar">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="navbar-brand" href="/">
+                      <img src="{% static "cse/image/Home.png" %}" alt="home"  width="30" height="24"/>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/python/">Python</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Java</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"> C </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">C++</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">C#</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">PHP</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">SQL</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">DBMS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">DS</a>
+                  </li>
+   <!--          <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Others
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>--->
+                </ul>
+                <form class="d-flex" action="" >
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                  <button class="btn btn-outline-info me-2" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+        </div>
+    </div>
+   
+    <div class="container-fluid">
+      <div class="row" id="row1">
+        <div class="col-md-4" id="col1">
+                
+        </div>
+        <div class="col-md-4" id="col2">
+          {% if user.profile.profile_image%}
+                  <img  class="rounded-circle account-img" id="profimg" src="{{user.profile.profile_image.url}}">
+                {% else %}
+                  <img  class="rounded-circle account-img" id="profimg" src="{% static "cse/image/default.png" %}">
+                {% endif %}
+                <div class="name">
+                    {{user.first_name}} {{user.last_name}}
+                </div>
+                <div class="desc">
+                    {% if user.profile.desc %}
+                        {{user.profile.desc}} 🖊
+                     {% else %}
+                        Write Something About You. 🖊
+                    {% endif %}
+                </div>
+        </div>
+        <div class="col-md-4" id="col3">
+            
+        </div>
+      </div> 
+      <div class="row" id="row2">
+        <div class="col-md-2" id="col4">
 
-    {{user.username}}
-    <img  class="rounded-circle account-img" id='proimg' src="{{user.profile.profile_image.url}}">
-    <form method="POST" class="form-group" enctype="multipart/form-data">
-        {% csrf_token %}
-        <p><label for="id_username">Username:</label> <input type="text" name="username" value="{{user.username}}" maxlength="150" required id="id_username"> <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span></p>
-        <p><label for="id_email">Email address:</label> <input type="email" name="email" value="{{user.email}}" maxlength="254" id="id_email"></p>
-        <p><label for="id_first_name">First Name:</label> <input type="text" name="first_name" value="{{user.first_name}}" maxlength="254" id="id_first_name"></p>
-        <p><label for="id_last_name">Last Name:</label> <input type="text" name="last_name" value="{{user.last_name}}" maxlength="254" id="id_last_name"></p>
-        {{p_form.as_p}}
-        <button type="submit">Submit</button>
+        </div>       
+        <div class="col-md-8"  id="col5">
+              <div class="row">
+                  <div class="col-md-6" id="col7">
+                      <div class="emailsec">
+                          <p id="pemail"> 📧Email :  </p>  
+                          <p id="uemail">{{user.email}}</p>
+                      </div>
+                      <div class="contactsec">
+                          {% if user.profile.contact_no %}
+                              <p id="pcon"> 📱Contact No :  </p>  
+                              <p id="ucon">{{user.profile.contact_no}}</p>
+                          {% else %}
+                              <p id="pcon"> 📱Contact No :  </p>  
+                              <p id="ucon">Add Your Contact No</p>
+                              
+                          {% endif %}
+                      </div>  
+                  </div>
+                  <div class="col-md-6" id="col8">
+                      <div class="gendersec">
+                          {% if user.profile.gender %}
+                              <p id="pgen"> 🙎‍♂️🙎‍♀️Gender:  </p>  
+                              <p id="ugen"> {{user.profile.gender}}</p>
+                          {% endif %}
+                      </div>
+                      <div class="locsec">
+                          {% if user.profile.city and user.profile.country %}
+                              <p id="ploc"> 🌏Location :  </p>  
+                              <p id="uloc">{{user.profile.city}}, {{user.profile.country}}</p>
 
-    </form>
+                          {% elif user.profile.city%}
+                              <p id="ploc"> 🌏Location :  </p>  
+                              <p id="uloc">{{user.profile.city}}</p>
+                          
+                          {% elif user.profile.country%}
+                              <p id="ploc"> 🌏Location :  </p>  
+                              <p id="uloc">{{user.profile.country}}</p>
 
+                          {% else %}
+                              <p id="ploc"> 🌏Location :  </p>  
+                              <p id="uloc">Add Your City And country</p>
+                              
+                          {% endif %}
+                      </div>  
+                  </div>
+
+              </div>
+          </div>
+          <div class="col-md-2"  id="col6">
+              
+          </div>
+      </div>
+      <div class="row" id="row3">
+        <div class="col-md-4">
+    
+        </div>
+        <div class="col-md-4" id="buttn2">
+            <a  class="btn btn-success  col-5 " id="editp" type="button" href="/editprofile/">Edit Profile</a>
+            <a  class="btn btn-danger col-5 " id="signo" type="button" href="/signout/">Sign Out</a>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+      </div>
+    </div>    
     
 </body>
 </html>
