--- a/quizsite/account/templates/account/signup.html
+++ b/quizsite/account/templates/account/signup.html
@@ -20,7 +20,106 @@
 	<title>Sign Up</title>
   </head>
   <body style="background-color:black;">
-	<div class="container-fluid">
+	<div class="header">
+        <div class="menu-bar">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top first-nav">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="/">MCQhero</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active"  href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Contact Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Disclaimer</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Privacy Policy</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Terms And Conditions</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Blog</a>
+                  </li>  
+                </ul>
+              </div>
+            </div>
+          </nav>
+          
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top second-navbar">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="navbar-brand" href="/">
+                      <img src="{% static "cse/image/Home.png" %}" alt="home"  width="30" height="24"/>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/python/">Python</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Java</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"> C </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">C++</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">C#</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">PHP</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">SQL</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">DBMS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">DS</a>
+                  </li>
+   <!--          <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Others
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>--->
+                </ul>
+                <form class="d-flex" action="" >
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                  <button class="btn btn-outline-info me-2" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+        </div>
+    </div>
+	<div class="container-fluid" id="contain1">
 		<form method="POST" class="form-group">
 			{% csrf_token %}
 			<div class="row">
