--- a/quizsite/cse/static/cse/css/index.css
+++ b/quizsite/cse/static/cse/css/index.css
@@ -7,205 +7,44 @@
 
 
 .nav2logo{
-    background-color: rgba(252, 7, 7, 0.801);
-    margin-top: 112px;
-
-}
-
-
-#black{
-    background-color: #000000ec;
-
-}
-
-#black1{
-    background-color: #000000ec;
-    margin-top: 110px;
-
-}
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Orbitron');
-#clock {
-  font-family: 'Orbitron', sans-serif;
-  color: #66ff99;
-  font-size: 30px;
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: black;
-  height: 70px;
-  width: 200px;
-  margin-top: 10px;
-  margin-left:340px;
-  border: 4px solid rgba(77, 75, 75, 0.829);
-  border-radius: 20px;
-}
-@media all and (max-width:30em){
-    #clock{
-        display:block;
-        margin:0.2em auto;
-    }
-}
-
-
-.screen{
-    color: rgba(255, 255, 255, 0.973);
-    background-color: #000000e5;
-    border: 6px solid rgb(27, 191, 212);
-    align-items: center;
-    margin-top: 10px;
-    border-radius: 30px;
-    font-size: 20px;
+    background: url("/static/cse/image/coverpic1.jpg") ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
+    margin-top: 113px;
+    border-bottom: 1px solid grey;
     text-align: center;
-    height: 100px;
+    
+}
+#desctext{
+    color: white
+}
+.textsec{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: rgba(255, 255, 255, 0.945);
+  
 }
 
 
-#sidecon{
-    margin-top: 10px;
-    background-color: rgb(252, 11, 252);
+#col1{
+    background-color: rgb(32, 30, 30)
+    
 }
-
-
-#outlined1{
-    background-color: #000000e5;
-    margin-top:5px;
-    height: 60px;
-    text-align: center;
-    padding-top: 10px;
-    color:white;
-    border: 4px solid rgba(247, 7, 175, 0.856);
-    border-radius: 20px;
-    margin-bottom: 5px;
-
+#col2{
+    background-color: lawngreen;
 }
-
-#outlined1:hover{
-    background-color: rgb(140, 0, 168);
-    color:black;
+.profimage{
+  color:white;
 }
-
-#outlined1:focus{
-    background-color: yellow;
-    color:black;
+.profimage:hover{
+    color:red;
+  }
+#pimg{
+    border: 2px solid white;  
 }
-
-
-#outlined2{
-    background-color: #000000e5;
-    margin-top:1px;
-    height: 60px;
-    text-align: center;
-    padding-top: 10px;
-    color:white;
-    border: 4px solid rgba(247, 7, 175, 0.856);
-    border-radius: 20px;
-    margin-bottom: 5px;
-
+#cardbtn1{
+    margin-bottom: 30px;
 }
-
-#outlined2:hover{
-    background-color: rgb(140, 0, 168);
-    color:black;
-}
-#outlined2:focus{
-    background-color: yellow;
-    color:black;
-}
-
-#outlined3{
-    background-color: #000000e5;
-    margin-top:5px;
-    height: 60px;
-    text-align: center;
-    padding-top: 10px;
-    color:white;
-    border: 4px solid rgba(247, 7, 175, 0.856);
-    border-radius: 20px;
-    margin-bottom: 5px;
-
-}
-
-#outlined3:hover{
-    background-color: rgb(140, 0, 168);
-    color:black;
-}
-#outlined3:focus{
-    background-color: yellow;
-    color:black;
-}
-
-#outlined4{
-    background-color: #000000e5;
-    margin-top:1px;
-    height: 60px;
-    text-align: center;
-    padding-top: 10px;
-    color:white;
-    border: 4px solid rgba(247, 7, 175, 0.856);
-    border-radius: 20px;
-    margin-bottom: 5px;
-
-}
-
-#outlined4:hover{
-    background-color: rgb(140, 0, 168);
-    color:black;
-}
-#outlined4:focus{
-    background-color: yellow;
-    color:black;
-}
-
-#submitbtnn{
-    background-color: rgb(255, 94, 0);
-    margin-top:5px;
-    height: 60px;
-    text-align: center;
-    color:black;
-    border: 2px solid black;
-    border-radius: 20px;
-    cursor: pointer;
-
-
-}
-#submitbtnn:hover{
-    background-color: rgb(180, 25, 201);
-    color: #000;
-}
-
-#submitbtnn:focus{
-    background-color: rgb(67, 202, 243);
-    color: black;
-}
-
-#submitanswer{
-    background-color: rgb(0, 255, 128);
-    margin-top:5px;
-    height: 60px;
-    text-align: center;
-    color:black;
-    border: 2px solid black;
-    border-radius: 20px;
-    cursor: pointer;
-
-
-}
-#submitanswer:hover{
-    background-color: rgb(180, 25, 201);
-    color: #000;
-}
-
-#submitanswer:focus{
-    background-color: rgb(67, 202, 243);
-    color: black;
-}
-
-.mysubmit{
-    text-align: center;
-    height: 70px; 
-    background-color:transparent;
-}
-
