--- a/quizsite/cse/static/cse/css/signin.css
+++ b/quizsite/cse/static/cse/css/signin.css
@@ -1,13 +1,19 @@
-
 #id1{
     background-color:black
     
+}
+.second-navbar {
+    margin-top: 56px;
+    border-top: 0.5px solid rgba(124, 120, 120, 0.973);
+}
+#contain1{
+    margin-top: 18px;
 }
 
 #id2{
     background-color: white;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 5px;
     border:2px solid rgb(24, 160, 47);
     padding-top: 5px;
     padding-bottom:10px;
@@ -54,7 +60,7 @@
 }
 #id_username{
     height: 45px;
-    width: 338px;
+    width: 300px;
     margin-top: 5px;
     border-color: black;
     border-width:1px;
@@ -64,7 +70,7 @@
 
 #id_password{
     height: 45px;
-    width: 338px;
+    width: 300px;
     border-color: black;
     border-width:1px;
     border-radius: 5px;
