--- a/quizsite/cse/static/cse/css/signup.css
+++ b/quizsite/cse/static/cse/css/signup.css
@@ -1,3 +1,11 @@
+.second-navbar {
+    margin-top: 56px;
+    border-top: 0.5px solid rgba(124, 120, 120, 0.973);
+}
+#contain1{
+    margin-top:110px;
+}
+
 #id1{
     background-color: black;
     
