--- a/quizsite/cse/templates/cse/python.html
+++ b/quizsite/cse/templates/cse/python.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="{%	static	'cse/css/index.css' %}" rel="stylesheet">
+    <link href="{%	static	'cse/css/python.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -18,10 +18,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     
     
-    <title>MCQhero</title>
+    <title> {% block title %} Python {% endblock %}</title>
   </head>
-    
+   
   <body style="background-color:black">
+    {% block content %}
     <div class="header">
       <div class="menu-bar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top first-nav">
@@ -33,7 +34,7 @@
               <a class="navbar-brand" href="/">MCQhero</a>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link active"  href="/">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">About Us</a>
@@ -54,7 +55,8 @@
                   <a class="nav-link" href="">Blog</a>
                 </li>  
               </ul>
-              <a href="/signout/" class="btn btn-outline-light me-2 " id="btn1">Sign out</a>
+              <a class="profimage" style="text-decoration: none;" href="/profile/"> {{user.first_name}} {{user.last_name}} 
+                <img  class="rounded-circle account-img" id="pimg" src="{{user.profile.profile_image.url}}" width="45" height="45"></a>
             </div>
           </div>
         </nav>
@@ -170,6 +172,8 @@
         </div>
       </div>
     </div>
+    {% endblock %}
   </body>
+ 
  
 </html>
